# Multi-Object-Tracking-Cpp

./: .gitignore  CMakeLists.txt  LICENSE  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  TECHNICAL_DETAILS.md  config.txt
include/: Detection.h  HungarianAlgorithm.h  KalmanFilter.h  Track.h  Tracker.h  YOLODetector.h
scripts/: build.sh  download_models.sh  run.sh  test_installation.sh
src/: HungarianAlgorithm.cpp  KalmanFilter.cpp  Track.cpp  Tracker.cpp  YOLODetector.cpp  main.cpp
